# open-interpreter-plugin-demo

./: README.md  pyproject.toml  test.py
api/: example.py  llama_index_manager.py
browse/: main.py  plugin.py
retrieve/: main.py
